--- a/index.html
+++ b/index.html
@@ -30,28 +30,34 @@
     <table>
       <thead>
         <tr>
-          <th><button class="btn-sort">^</button> Number</th>
-          <th><button class="btn-sort">^</button> First Name</th>
-          <th><button class="btn-sort">^</button> Lat Name</th>
-          <th><button class="btn-sort">^</button> Options</th>
+          <th><button class="btn-sort" data-sort-btn>^</button> Number</th>
+          <th><button class="btn-sort" data-sort-btn>^</button> First Name</th>
+          <th><button class="btn-sort" data-sort-btn>^</button> Lat Name</th>
+          <th>Options</th>
         </tr>
       </thead>
       <tbody>
         <tr>
           <td>1</td>
-          <td>Name1</td>
+          <td>D</td>
           <td>Last Name1</td>
           <td><input type="checkbox"></td>
         </tr>
         <tr>
           <td>2</td>
-          <td>Name2</td>
+          <td>C</td>
           <td>Last Name2</td>
           <td><input type="checkbox"></td>
         </tr>
         <tr>
           <td>3</td>
-          <td>Name3</td>
+          <td>B</td>
+          <td>Last Name3</td>
+          <td><input type="checkbox"></td>
+        </tr>
+        <tr>
+          <td>4</td>
+          <td>A</td>
           <td>Last Name3</td>
           <td><input type="checkbox"></td>
         </tr>
