--- a/index.html
+++ b/index.html
@@ -41,29 +41,41 @@
           <td>1</td>
           <td>D</td>
           <td>Last Name1</td>
-          <td><input type="checkbox"></td>
+          <td><input type="checkbox" data-delete></td>
         </tr>
         <tr>
           <td>2</td>
           <td>C</td>
           <td>Last Name2</td>
-          <td><input type="checkbox"></td>
+          <td><input type="checkbox" data-delete></td>
         </tr>
         <tr>
           <td>3</td>
           <td>B</td>
           <td>Last Name3</td>
-          <td><input type="checkbox"></td>
+          <td><input type="checkbox" data-delete></td>
         </tr>
         <tr>
           <td>4</td>
           <td>A</td>
           <td>Last Name3</td>
-          <td><input type="checkbox"></td>
+          <td><input type="checkbox" data-delete></td>
+        </tr>
+        <tr>
+          <td>4</td>
+          <td>A</td>
+          <td>Last Name3</td>
+          <td><input type="checkbox" data-delete></td>
+        </tr>
+        <tr>
+          <td>4</td>
+          <td>A</td>
+          <td>Last Name3</td>
+          <td><input type="checkbox" data-delete></td>
         </tr>
       </tbody>
     </table>
-    <button class="btn-delete pull-right">Delete</button>
+    <button class="btn-delete pull-right" data-delete-btn>Delete</button>
   </div>
   <script src="table.js"></script>
 </body>
