1. added dynamic data for table;

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
       - Использование спецификации ES5
       - В качестве code styleguide используем этот свод правил https://github.com/airbnb/javascript (не обращаем внимание на то, что относится к ES6: let, const и т.д.)
 
-      Бонусные требования: реализовать фильтр.
+      Бонусные требования: 
+        1) реализовать фильтр.
+        2) наполнять таблицу данными
     </pre>
     <table>
       <thead>
@@ -39,42 +41,6 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
-          <td>1</td>
-          <td>D</td>
-          <td>Last Name1</td>
-          <td><input type="checkbox" data-delete></td>
-        </tr>
-        <tr>
-          <td>2</td>
-          <td>C</td>
-          <td>Last Name2</td>
-          <td><input type="checkbox" data-delete></td>
-        </tr>
-        <tr>
-          <td>3</td>
-          <td>B</td>
-          <td>Last Name3</td>
-          <td><input type="checkbox" data-delete></td>
-        </tr>
-        <tr>
-          <td>4</td>
-          <td>Aa</td>
-          <td>Last Name3</td>
-          <td><input type="checkbox" data-delete></td>
-        </tr>
-        <tr>
-          <td>5</td>
-          <td>Ab</td>
-          <td>Last Name3</td>
-          <td><input type="checkbox" data-delete></td>
-        </tr>
-        <tr>
-          <td>6</td>
-          <td>Ac</td>
-          <td>Last Name3</td>
-          <td><input type="checkbox" data-delete></td>
-        </tr>
       </tbody>
     </table>
     <button class="btn-delete pull-right" data-delete-btn>Delete</button>
