--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
         1) реализовать фильтр.
         2) наполнять таблицу данными
     </pre>
-    <table>
+    <h1>Table 1</h1>
+    <table class="table-1">
       <thead>
         <tr>
           <th><button class="btn-sort" data-sort-btn>^</button> Number <input id="number" type="text" data-filter-value="0"></th>
@@ -43,7 +44,21 @@
       <tbody>
       </tbody>
     </table>
-    <button class="btn-delete pull-right" data-delete-btn>Delete</button>
+
+    <h1>Table 1</h1>
+    <table class="table-2">
+      <thead>
+        <tr>
+          <th><button class="btn-sort" data-sort-btn>^</button> Number <input id="number" type="text" data-filter-value="0"></th>
+          <th><button class="btn-sort" data-sort-btn>^</button> First Name <input id="first-name" type="text" data-filter-value="1"></th>
+          <th><button class="btn-sort" data-sort-btn>^</button> Last Name <input id="last-name" type="text" data-filter-value="2"></th>
+          <th>Options</th>
+        </tr>
+      </thead>
+      <tbody>
+      </tbody>
+    </table>
+    <button class="btn-delete" data-delete-btn>Delete</button>
   </div>
   <script src="table.js"></script>
 </body>
