--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </tbody>
     </table>
 
-    <h1>Table 1</h1>
+    <h1>Table 2</h1>
     <table class="table-2">
       <thead>
         <tr>
@@ -59,6 +59,7 @@
       </tbody>
     </table>
     <button class="btn-delete" data-delete-btn>Delete</button>
+    <button class="btn-reset" data-reset-btn>Reset</button>
   </div>
   <script src="table.js"></script>
 </body>
